fixed alignment issue in buttons

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -27,8 +27,6 @@
     -webkit-box-pack: center;
     justify-content: center;
     text-align: center;
-    width: 90%;
-    /* border: 2px solid #f60e0e; */
 }
 
 .button_container {
